--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.namomedia.android"
+  package="com.namomedia.samples"
   android:versionCode="1"
-  android:versionName="1.0">
+  android:versionName="1.0" >
 
   <uses-sdk
     android:minSdkVersion="8"
@@ -16,10 +16,10 @@
     android:allowBackup="false"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
-    android:theme="@style/AppTheme">
+    android:theme="@style/AppTheme" >
     <activity
       android:name=".MainActivity"
-      android:label="@string/app_name">
+      android:label="@string/app_name" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
