Check in Eclipse and IntelliJ project files

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 # Eclipse
-.project
-.classpath
 .settings
 .checkstyle
 out
 
 # IntelliJ IDEA
-.idea
-*.iml
 *.ipr
 *.iws
+workspace.xml
+tasks.xml
 classes
 gen-external-apklibs
 
