--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
   dependencies {
-    classpath 'com.android.tools.build:gradle:0.6.+'
+    classpath 'com.android.tools.build:gradle:0.6.3'
   }
 
   repositories {
@@ -14,6 +14,7 @@ apply plugin: 'android'
 dependencies {
   compile 'com.android.support:appcompat-v7:+'
   compile files('libs/Parse-1.3.5.jar')
+  compile('com.namomedia.android:namo:2.0.0@aar')
 }
 
 android {
@@ -30,11 +31,23 @@ android {
 
   defaultConfig {
     minSdkVersion 8
-    targetSdkVersion 14
+    targetSdkVersion 16
   }
 }
 
 repositories {
   mavenCentral()
+  maven {
+    url 'https://oss.sonatype.org/content/groups/staging'
+  }
+}
+
+apply plugin: 'idea'
+
+idea {
+  module {
+    downloadJavadoc = true
+    downloadSources = true
+  }
 }
 
