--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
       <artifactId>Parse</artifactId>
       <version>1.3.5</version>
     </dependency>
+    <dependency>
+      <groupId>com.namomedia.android</groupId>
+      <artifactId>Namo</artifactId>
+      <version>2.0.0</version>
+      <type>apklib</type>
+    </dependency>
   </dependencies>
   <build>
     <finalName>${project.artifactId}</finalName>
@@ -50,4 +56,11 @@
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>namomedia.repo</id>
+      <url>https://oss.sonatype.org/content/groups/staging</url>
+    </repository>
+  </repositories>
 </project>
