--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'android'
 dependencies {
   compile 'com.android.support:appcompat-v7:+'
   compile files('libs/Parse-1.3.5.jar')
-  compile('com.namomedia.android:namo:2.0.0@aar')
+  compile('com.namomedia.android:namo:2.0.1@aar')
 }
 
 android {
@@ -35,9 +35,13 @@ android {
   }
 }
 
-repositories {
+// Uncomment to use staging repo
+/*repositories {
   mavenCentral()
-}
+  maven {
+    url 'https://oss.sonatype.org/content/groups/staging'
+  }
+}*/
 
 apply plugin: 'idea'
 
